--- a/templates/index.html
+++ b/templates/index.html
@@ -151,7 +151,7 @@ span.psw {
 <footer>
 
   <div>
-    <h2 class="Warn"><b> Warning:-</b> This is Created for Educational Purpose Only.Verify/Compare the output with other reliable Sources then make any decision/Conclusion.This Web-App does not claims the predicited output is 100% True</h2>
+    <h2 class="Warn"><b> Warning:-</b> This is Created for Educational Purpose Only.Please do Verify/Compare the output with other reliable sources too and then make any decision/Conclusion.</h2>
   </div>
 </footer>
 
